vlib/v/parser/tests/embed_file_evaluated_but_not_used_before_braced_result.out
vlib/v/parser/tests/embed_file_evaluated_but_not_used_before_braced_result.vv:6:4: error: expression evaluated but not used
    4 |     _ := if outer {
    5 |         if cond {
    6 |             $embed_file(@FILE)
      |             ~~~~~~~~~~~~~~~~~~
    7 |         }
    8 |         {
