vlib/v/parser/tests/embed_file_evaluated_but_not_used_before_braced_result.vv
fn main() {
	outer := true
	cond := true
	_ := if outer {
		if cond {
			$embed_file(@FILE)
		}
		{
			'a': 1
		}
	} else {
		{
			'b': 2
		}
	}
}
